--- a/assets/style.css
+++ b/assets/style.css
@@ -33,3 +33,21 @@ body {
     .cartao__conteudo_resposta{
       transform: rotateY(180deg);
     }
+    @media (max-width:560px){
+    
+      body{
+        background:url('img/bg-mobile.webp'), no repeat cover
+      }
+
+
+      .cartao{
+        flex:1 0 calc(100-1rem)
+      }
+      .cartao__conteudo h3{
+        font-size: 3vw;;
+      }
+
+
+      .cartao__conteudo  p { font-size: 3.8vw;
+        }
+      }
